fixed gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .container {
-  margin-top: 20%;
+  margin-top: 10%;
   margin-bottom: 3%;
   border-radius: 6px;
   padding: 10px;
